--- a/contribution-app/src/components/Navbar.css
+++ b/contribution-app/src/components/Navbar.css
@@ -11,6 +11,31 @@
 .close{
     display: none;
 }
+
+.nav-links{
+    position: relative;
+    margin: 0 1em;
+}
+.btn:hover{
+    background: none;
+    border-color: transparent;
+}
+.nav-links::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: currentColor;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in;
+}
+.nav-links:hover::after{
+    transform: scaleX(1);
+    transform-origin: left;
+}
 @media screen and (min-width:300px) and (max-width:1025px) {
     .hamburger{
         display:block;
