--- a/contribution-app/src/components/Navbar.css
+++ b/contribution-app/src/components/Navbar.css
@@ -16,6 +16,9 @@
     position: relative;
     margin: 0 1em;
 }
+.btn {
+    border-color: transparent;
+}
 .btn:hover{
     background: none;
     border-color: transparent;
