--- a/contribution-app/src/components/Profilecard.css
+++ b/contribution-app/src/components/Profilecard.css
@@ -1,34 +1,37 @@
-.profile-card > div{
-    display: flex;
-    justify-content: center;
-    width: 100%;
+.profile-card > div {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
-.profile-card > div > img{
-    border-radius: 50%;
-    width: 12rem;
-    height: 12rem;
+.profile-card > div > img {
+  border-radius: 50%;
+  width: 12rem;
+  height: 12rem;
 }
-.profile-card:hover{
-    box-shadow: -1px 1px 22px 1px rgba(198, 199, 201, 0.5);
-    border-radius: 15px;
+.profile-card:hover {
+  box-shadow: -1px 1px 22px 1px rgba(198, 199, 201, 0.5);
+  border-radius: 15px;
 }
-.contributor-name{
-    display: inline-block;
-    position: relative;
+.contributor-name {
+  display: inline-block;
+  position: relative;
 }
-.contributor-name::after{
-    content: '';
-    position: absolute;
-    width: 110%;
-    height: 3px;
-    left: 0;
-    bottom: 0;
-    background-color: grey;
-    transform-origin: left;
-    transform: scaleX(0);
-    transform: scaleX(0);
-    transition: transform 350ms ease-in;
+.contributor-name::after {
+  content: "";
+  position: absolute;
+  width: 110%;
+  height: 3px;
+  left: 0;
+  bottom: 0;
+  background-color: grey;
+  transform-origin: left;
+  transform: scaleX(0);
+  transform: scaleX(0);
+  transition: transform 350ms ease-in;
 }
-.profile-card:hover .contributor-name::after{
-    transform: scaleX(1);
+.profile-card:hover .contributor-name::after {
+  transform: scaleX(1);
+}
+input[type="search"]::-webkit-search-cancel-button {
+  cursor: pointer;
 }
